# LangLearnApp

./: CMakeLists.txt  README.md  fragment.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryitem.h  resources.qrc
